--- a/React/index.css
+++ b/React/index.css
@@ -234,3 +234,56 @@ hr {
     padding: 12px 16px 12px 16px;
     margin-top: 10px;
 }
+
+/* 사진첨부 */
+
+.picture-enroll-row {
+    display: flex;
+    align-items: flex-start;
+    gap: 16px;
+}
+
+.enroll-row-section {
+    align-self: stretch;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+
+/* 하단 버튼 */
+
+.enroll-button-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 16px;
+    align-self: stretch;
+    padding-top: 40px;
+}
+
+.enroll-cancel-button {
+    display: flex;
+    height: 48px;
+    padding: 12px 16px;
+    align-items: center;
+    gap: 8px;
+    border-radius: 8px;
+    border: 1px solid var(--gray-B, #000);
+    background: var(--gray-w, #fff);
+}
+
+  .enroll-submit-button {
+    border-radius: 8px;
+    background: #2974e5;
+    display: flex;
+    height: 48px;
+    padding: 12px 16px;
+    align-items: center;
+    gap: 8px;
+    border: 0;
+    color: #ffffff;
+}
