feat: 입력값 유효성 검사 및 빈 필드에 메시지 표시 기능 구현

--- a/trip-talk/src/components/createPost/createPost.module.css
+++ b/trip-talk/src/components/createPost/createPost.module.css
@@ -12,15 +12,15 @@ form > div {
 }
 
 .author_info_wrapper > * {
-  width: 50%;
+  flex: 1;
 }
 
 .title_wrapper {
-  @apply flex-col gap-2;
+  @apply flex-col;
 }
 
 .content_wrapper {
-  @apply flex-col gap-2;
+  @apply flex-col;
 }
 
 .content_wrapper > div {
@@ -74,4 +74,9 @@ form > div {
 
 .button_wrapper {
   @apply flex flex-row gap-4 items-center justify-end border-none;
+}
+
+.required_field {
+  @apply flex pt-2 text-base font-medium;
+  color: #F66A6A;
 }
