--- a/react-homework/myproject/src/App.css
+++ b/react-homework/myproject/src/App.css
@@ -43,7 +43,6 @@ main {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  color: #ababab;
   outline: none;
 }
 
@@ -79,7 +78,6 @@ main {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  color: #ababab;
   outline: none;
 }
 
@@ -126,7 +124,6 @@ main {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  color: #ababab;
 }
 
 .photoBox {
@@ -187,4 +184,12 @@ hr {
 
 span {
   color: #f66a6a;
+}
+
+.errorText {
+  height: 24px;
+  color: #f66a6a;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
 }
