[240921] 필수 입력 사항 검증

--- a/react-homework/myproject/src/App.css
+++ b/react-homework/myproject/src/App.css
@@ -54,6 +54,10 @@ textarea::placeholder {
   gap: 40px;
 }
 
+.error-msg {
+  color: #F66A6A;
+}
+
 /* 공통 - 레이블과 인풋 그룹 */
 .input-group {
   display: flex;
