--- a/03-react-hw/src/App.css
+++ b/03-react-hw/src/App.css
@@ -1,14 +1,3 @@
-@font-face {
-  font-family: "Pretendard Variable";
-  src: url("./font/PretendardVariable.woff2") format("woff2");
-}
-
-* {
-  font-family: "Pretendard Variable";
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 body {
   display: flex;
   justify-content: center;
@@ -214,4 +203,13 @@ form {
   font-size: 18px;
   font-weight: 600;
   line-height: 24px; /* 133.333% */
+}
+
+.필수입력에러 {
+  color: var(--red, #f66a6a);
+
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem; /* 150% */
 }
