툴팁스타일 수정

--- a/react 과제/src/index.css
+++ b/react 과제/src/index.css
@@ -26,11 +26,7 @@
   }
 
   .toolTip {
-    @apply hidden;
-  }
-
-  .invalidStyle:invalid ~ .toolTip {
-    @apply block text-red-500;
+    @apply text-red-500;
   }
 }
 
