✨ feat: 게시글 등록 페이지의 필수항목 입력 시 등록 버튼 활성화 기능 추가

--- a/react/DAY18/react-homework/src/App.css
+++ b/react/DAY18/react-homework/src/App.css
@@ -88,7 +88,16 @@ textarea {
   padding: 0 var(--gap-16);
 }
 
-.button-fill-type {
+.button-common.disabled {
+  cursor: not-allowed;
+}
+
+.button-fill-type.bg-gray {
+  color: var(--gray-100);
+  background-color: var(--gray-300);
+}
+
+.button-fill-type.bg-blue {
   color: var(--gray-w);
   background-color: var(--accent-blue);
 }
