--- a/frontend/section02/my-app/src/pages/Post.css
+++ b/frontend/section02/my-app/src/pages/Post.css
@@ -15,11 +15,17 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+  margin: 40px 0px;
+}
+.input-area {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 40px;
 }
 .editor-header {
   font-size: 20px;
   font-weight: 700;
-  margin-top: 40px;
 }
 .input-form {
   display: flex;
@@ -27,13 +33,14 @@
   gap: 40px;
 }
 .id-pw-area {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  display: flex;
   gap: 40px;
 }
 .content-area {
   display: flex;
   flex-direction: column;
+  flex: 1 1;
   gap: 8px;
 }
 .input-form-title {
