--- a/myproject/src/routes/broads/new/BoardsDetail.css
+++ b/myproject/src/routes/broads/new/BoardsDetail.css
@@ -103,6 +103,10 @@ main {
   align-items: center;
 }
 
+.good_count {
+  color: #f66a6a;
+}
+
 .list_edit_box {
   display: flex;
   justify-content: center;
