--- a/메인캠프/maincamp/src/App.css
+++ b/메인캠프/maincamp/src/App.css
@@ -18,13 +18,13 @@ button {
   overflow-x: hidden;
 }
 
-#contentContainer {
+.container {
   display: flex;
   width: 60vw;
   padding: 2.5rem 0rem;
   flex-direction: column;
   align-items: flex-start;
-  gap: 2.5rem;
+  gap: 2rem;
   flex-shrink: 0;
 }
 
@@ -138,8 +138,8 @@ button {
   color: black;
 }
 .registerBtn {
-  background: #2974e5;
-  color: white;
+  background: gray;
+  color: black;
 }
 
 .errorMsg {
@@ -147,4 +147,110 @@ button {
   color: red;
   font-size: 0.7rem;
   line-height: 1.5rem;
+}
+
+/* boardDetail page */
+.boardInfo {
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+  justify-content: space-between;
+}
+#boardTitle {
+  font-weight: 700;
+  margin-bottom: 2rem;
+  font-size: 1.5rem;
+}
+.detailBlock {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0.6rem;
+}
+.detailBlock .boardWriter {
+  display: flex;
+  img {
+    margin-right: 0.5rem;
+  }
+  p {
+    color: gray;
+    font-weight: 400;
+    line-height: 1.6rem;
+    font-size: 0.8rem;
+  }
+}
+.boardDate {
+  p {
+    color: gray;
+    font-weight: 400;
+    line-height: 1.6rem;
+    font-size: 0.8rem;
+  }
+}
+.contentExtra {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  gap: 0.5rem;
+
+  padding-top: 0.6rem;
+  border-top: 1px solid var(--Gray-Gray-200, #d4d3d3);
+  img {
+    width: 1rem;
+  }
+}
+.boardContent {
+  .exImg {
+    width: 20rem;
+    height: 26rem;
+  }
+  .exVideo {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.countLike {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+  gap: 1rem;
+}
+.countLike div {
+  display: flex;
+  flex-direction: column;
+  img {
+    width: 1.5rem;
+    height: auto;
+  }
+  p {
+    font-size: 0.7rem;
+  }
+}
+
+.detailBtnList {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  width: 100%;
+  gap: 1rem;
+  button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2rem;
+    padding: 1rem;
+    gap: 0.3rem;
+    border-radius: 0.5rem;
+    border: 1px solid black;
+
+    text-align: center;
+    background: none;
+    font-weight: 700;
+  }
+  button img {
+    width: 1rem;
+    height: auto;
+  }
 }
