--- a/React/reactproject/src/routes/boards/detail/BoardsDetail.css
+++ b/React/reactproject/src/routes/boards/detail/BoardsDetail.css
@@ -13,6 +13,7 @@ body {
 
 .css_layout {
   width: 1280px;
+  height: 2171px;
   padding: 40px 0px 40px 0px;
   left: 320px;
   gap: 40px;
@@ -65,9 +66,9 @@ body {
     text-align: right;
 }
 
-hr {
+.css_detailhr {
     margin-bottom: 20px;
-   
+    border: 1px solid #E4E4E4;
 }
 
 .css_side {
@@ -142,7 +143,7 @@ hr {
     color: red;
 }
 
-.css_button {
+.css_detailbutton {
     width: 1280px;
     height: 40px;
     gap: 24px;
