[240924] 1. 공통     - 완성된 day18 폴더를 활용하여 day19를 완성해 주세요.     - 타입스크립트를 설치해주세요.     - tsconfig.json 설정을 완료해주세요.     - src/App.js, src/index.js 파일의 확장자를 tsx로 변경해주세요     - 해당 파일에서 발생되는 타입에러(빨간색 에러로 알려줍니다)를 모두 해결합니다. 2. 게시글등록     - src/routes/boards/neew/BoardNew.js  파일의 확장자를 tsx로 변경 해주세요.     - 해당 파일에서 발생되는 타입에러를 모두 해결합니다. 3. 게시글상세     - src/routes/boards/detail/BoardsDetail.js 파일의 확장자를 tsx로 변경해 주세요.     - 해당 파일에서 발생되는 타입에러(빨간밑줄)를 모두 해결합니다.

--- a/02-main_camp/Day19/src/routes/boards/new/BoardsNew.css
+++ b/02-main_camp/Day19/src/routes/boards/new/BoardsNew.css
@@ -27,19 +27,19 @@
   font-size: 20px;
 }
 
-main {
+.BoardsNew_main {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 2.5rem;
 }
 
-.UserInputForm {
+.BoardsNew_UserInputForm {
   display: flex;
   gap: 2.5rem;
 }
 
-.inputForm {
+.BoardsNew_inputForm {
   width: 100%;
   display: flex;
   flex-direction: column;
