TRT-5 foundation: start

--- a/triptalk/app/ui/globals.css
+++ b/triptalk/app/ui/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* 
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -30,4 +30,4 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
+} */
