--- a/trip-talk/src/app/routes/boards/detail/styles.module.css
+++ b/trip-talk/src/app/routes/boards/detail/styles.module.css
@@ -1,111 +1,61 @@
 .layout {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
+  @apply flex flex-col gap-6;
 }
 
 .title {
-  color: #000;
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 36px;
+  @apply font-bold text-3xl text-black;
 }
 
 .author_info {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 54px;
+  @apply flex flex-row justify-between;
 }
 
 .author_name {
-  display: flex;
-  gap: 4px;
-  align-items: center;
+  @apply flex gap-1 items-center;
 }
 
 .date {
-  @apply flex;
-  justify-content: flex-end;
-  align-items: center;
-  gap: 8px;
-  flex: 1 0 0;
-  align-self: stretch;
+  @apply flex justify-end items-center gap-2 text-sm font-normal;
   color: #818181;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
 }
 
 .divider {
-  width: 1280px;
-  height: 1px;
-  background: var(--gray-100, #e4e4e4);
-  margin: 16px 0 16px 0;
+  @apply w-full h-px my-4 bg-lightGray;
 }
 
 .link_location_row {
-  display: flex;
-  justify-content: end;
-  gap: 8px;
+  @apply flex justify-end gap-2;
 }
 
 .post_content {
-  text-align: start;
-  color: #000;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
+  @apply text-start text-black text-base font-normal;
 }
 
 .video_thumbnail_wrapper {
-  display: flex;
-  padding: 24px 0px;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  align-self: stretch;
-  background: var(--gray-50, #F2F2F2);
+  @apply flex py-6 flex-col items-center gap-2.5;
+  background-color: #F2F2F2;
 }
 
 .reaction {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 24px;
-  align-self: stretch;
+  @apply flex justify-center items-center gap-6;
 }
 
 .reaction > div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 4px;
+  @apply flex flex-col justify-center items-center gap-1;
 }
 
 .reaction > div > p {
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
+  @apply text-sm font-normal;
 }
 
 .bad_count {
-  color: var(--gray-700, #5f5f5f);
+  color: #5f5f5f;
 }
 
 .good_count {
-  color: var(--red, #f66a6a);
+  @apply text-lightCoral;
 }
 
 .button_layout {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 24px;
-  align-self: stretch;
+  @apply flex justify-center items-center gap-6;
 }
