--- a/Next/nextproject/next-app/src/app/routes/boards/detail/style.module.css
+++ b/Next/nextproject/next-app/src/app/routes/boards/detail/style.module.css
@@ -1,16 +1,3 @@
-/* * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-} */
-
 .css_layout {
   width: 1280px;
   height: 2171px;
@@ -80,13 +67,24 @@ body {
     margin-bottom: 100px;
 }
 
+.css_sidebutton {
+    width: 56px;
+    height: 24px;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+}
+
 .css_clip {
     width: 19px;
+    height: 9px;
+    margin-top: 2px;
 }
 
 .css_location {
-    width: 24px;
-}
+    width: 15px;
+    height: 18px;
+    }
 
 
 .css_image {
@@ -104,7 +102,6 @@ body {
     gap: 24px;
     margin-top: 40px;
     margin-bottom: 40px;
-    
 }
 
 .css_bottomimage {
@@ -125,9 +122,6 @@ body {
     height: 464px;
 }
 
-
-
-
 .css_heart {
     width: 1280px;
     height: 48px;
@@ -135,6 +129,7 @@ body {
     display: flex;
     justify-content: center;
 }
+
 .css_hate {
     width: 19px;
     gap: 24px;
