폰트 및 아이콘 연결 추가 스타일 수정

--- a/next_과제/src/app/globals.css
+++ b/next_과제/src/app/globals.css
@@ -5,6 +5,8 @@
 @tailwind utilities;
 
 :root {
+  --noto-sans-kr: "Noto Sans KR";
+  --roboto: "Roboto";
   /* --background: #ffffff;
   --foreground: #171717; */
 }
@@ -25,9 +27,9 @@ body {
   background: var(--background); */
   /* font-family: Arial, Helvetica, sans-serif; */
 
-  font-family: "GmarketSans", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
+  font-family: var(--noto-sans-kr), var(--roboto), -apple-system,
+    BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
