--- a/Next/nextproject/next-app/src/app/routes/boards/detail/style.module.css
+++ b/Next/nextproject/next-app/src/app/routes/boards/detail/style.module.css
@@ -27,6 +27,7 @@
     float: right;
     display: flex;
     margin-bottom: 24px;
+    margin-top: 10px
 }
 
 .css_name {
@@ -34,7 +35,6 @@
     height: 24px;
     gap: 4px;
     display: flex; 
-   
 }
 
 .css_profileimage {
@@ -54,8 +54,8 @@
 }
 
 .css_detailhr {
-    margin-bottom: 20px;
     border: 1px solid #E4E4E4;
+    margin-top: 15px;
 }
 
 .css_side {
@@ -64,7 +64,7 @@
     gap: 10px;
     display: flex;
     justify-content: right;
-    margin-bottom: 100px;
+    margin-top: 10px;
 }
 
 .css_sidebutton {
@@ -73,6 +73,7 @@
     display: flex;
     flex-direction: row;
     gap: 8px;
+
 }
 
 .css_clip {
@@ -84,7 +85,7 @@
 .css_location {
     width: 15px;
     height: 18px;
-    }
+}
 
 
 .css_image {
