--- a/next_과제/src/app/globals.css
+++ b/next_과제/src/app/globals.css
@@ -1,5 +1,3 @@
-@import url("https://webfontworld.github.io/gmarket/GmarketSans.css");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,31 +5,78 @@
 :root {
   --noto-sans-kr: "Noto Sans KR";
   --roboto: "Roboto";
-  /* --background: #ffffff;
-  --foreground: #171717; */
 }
 
-/* * {
-  box-sizing: border-box;
-} */
-
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
-    /* --background: #0a0a0a;
-    --foreground: #ededed; */
   }
 }
 
-body {
-  /* color: var(--foreground);
-  background: var(--background); */
-  /* font-family: Arial, Helvetica, sans-serif; */
+@media (prefers-color-scheme: dracula) {
+  :root {
+  }
+}
 
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+}
+
+@layer components {
+  .fixedBtn {
+    @apply fixed bottom-12 right-5 z-10;
+  }
+  .mainContent {
+    @apply max-w-7xl m-auto py-10 max-xl:max-w-full max-xl:mx-5 flex flex-col gap-10;
+  }
+  .whiteBtn {
+    @apply bg-white text-black rounded-lg border-black border py-3 px-4 text-nowrap;
+  }
+  .blackBtn {
+    @apply bg-black text-white rounded-lg border-inherit border py-3 px-4 text-nowrap;
+  }
+  .blueBtn {
+    @apply bg-blue-500 text-white rounded-lg border-inherit border py-3 px-4 text-nowrap;
+  }
+
+  .grayBtn {
+    @apply bg-gray-300 text-white rounded-lg border-inherit border py-3 px-4 text-nowrap;
+  }
+  .imgUploadBox {
+    @apply appearance-none bg-gray-50 flex flex-col items-center justify-center rounded-lg w-40 h-40 gap-2 text-gray-500 font-light cursor-pointer;
+  }
+
+  svg > path {
+    @apply fill-inherit;
+  }
+
+  .toolTip {
+    @apply text-red-500;
+  }
+
+  .videoContainer {
+    @apply relative;
+    padding-top: 56.25%;
+  }
+
+  .videoContainer iframe {
+    @apply absolute top-0 left-0 w-full h-full;
+  }
+
+  #writeContent {
+    @apply h-96 flex flex-col;
+  }
+}
+
+html,
+body {
   font-family: var(--noto-sans-kr), var(--roboto), -apple-system,
     BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 .blind {
@@ -82,50 +127,4 @@ body {
 .ql-picker-item {
   /* for dropdown */
   color: #444 !important;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
-
-@layer components {
-  .whiteBtn {
-    @apply bg-white text-black rounded-lg border-black border py-3 px-4 text-nowrap;
-  }
-  .blackBtn {
-    @apply bg-black text-white rounded-lg border-inherit border py-3 px-4 text-nowrap;
-  }
-  .blueBtn {
-    @apply bg-blue-500 text-white rounded-lg border-inherit border py-3 px-4 text-nowrap;
-  }
-
-  .grayBtn {
-    @apply bg-gray-300 text-white rounded-lg border-inherit border py-3 px-4 text-nowrap;
-  }
-  .imgUploadBox {
-    @apply appearance-none bg-gray-50 flex flex-col items-center justify-center rounded-lg w-40 h-40 gap-2 text-gray-500 font-light cursor-pointer;
-  }
-
-  svg > path {
-    @apply fill-inherit;
-  }
-
-  .toolTip {
-    @apply text-red-500;
-  }
-
-  .videoContainer {
-    @apply relative;
-    padding-top: 56.25%;
-  }
-
-  .videoContainer iframe {
-    @apply absolute top-0 left-0 w-full h-full;
-  }
-
-  #writeContent {
-    @apply h-96 flex flex-col;
-  }
 }
