--- a/homework/my-app/src/app/boards/detail/style.module.css
+++ b/homework/my-app/src/app/boards/detail/style.module.css
@@ -58,18 +58,21 @@ body{
 }
 .authorDateContainer {
   display: flex;
+  gap:5px;
 }
 .profilebasic {
-  width: 20px;
-  height: 20px;
-  margin-top: 3px;
+  width: 24px;
+  height: 24px;
+
 }
 .authorName {
   margin-left: 3px;
+  font-size: 16px;
+  color:#000
+
 }
 .date {
-  margin-bottom: 3px;
-  margin-left: 8px;
+  font-size: 14px;
 }
 
 
@@ -88,24 +91,30 @@ body{
   place-items: center;
 }
 .grid1 {
-  display: flex; /* Flexbox를 사용하여 세로 방향으로 배치 */
-  flex-direction: column; /* 세로 방향으로 정렬 */
-  align-items: center; /* 수평 중앙 정렬 */
-  height: 100%; /* Makes the container take the full height of its grid cell */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  border: 1px solid var(--gray-700);
+  padding: 20px;
+  border-radius: 30px;
+  height: 530px;
+
+  align-self: start; /* 그리드 셀의 상단에 위치 */
 }
+
 .imgContainer {
-  max-width: 500px;
+  max-width: 550px;
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
   
 }
 .carouselImage {
-  width: 100%; /* imgContainer의 너비에 맞춤 */
+  width: 550px; /* imgContainer의 너비에 맞춤 */
   height: 100%; /* height를 정사각형으로 고정 */
   aspect-ratio: 1 / 1; /* 정사각형 비율 유지 */
   object-fit: cover; /* 이미지 비율을 유지하면서 중앙에 맞춤 */
-  margin: 5px 0;
   justify-content: center;
 }
 
@@ -117,7 +126,7 @@ body{
   flex-direction: column;
   justify-content: flex-start;
   height: 100%;
-  padding-left:45px;
+  padding-left:30px;
   /* max-height: 550px; */
 }
 .textContent {
@@ -149,12 +158,15 @@ body{
 .addressContainer {
   width: 100%; /* 필요한 경우 전체 너비 설정 */
   text-align: left; /* 왼쪽 정렬 */
+  position: relative;
 }
 
 .address {
   margin: 0; /* 여백 제거 */
   padding: 0; /* 여백 제거 */
   text-align: left; /* 왼쪽 정렬 */
+  position: absolute;
+  top: -35px;
 }
 .good {
   display: flex;
@@ -174,7 +186,7 @@ body{
   /* border-bottom: 1px solid var(--gray-300); */
 }
 .grayBox {
-  background-color: var(--gray-50);
+  background-color: #dcdfe6;
   width: 100%;
   height: 512px;
   display: flex;
@@ -216,6 +228,71 @@ background: var(--gray-w, #FFF);
   display: flex;
   justify-content: center;
   padding-bottom: 50px;
+  margin-bottom: 30px;
   border-bottom: 1px solid var(--gray-300);
   gap:24px
+}
+
+
+
+/* -----------------댓글부분---------------------*/
+.commentContainer {
+
+}
+.titil_sm {
+  font-size: 20px;
+  margin: 20px 0;
+}
+.rating{
+  margin-left: 10px;
+  display: flex;
+  gap: 8px;
+
+}
+.commentInput {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  margin: 20px 0;
+}
+.commentUpload {
+  display: flex;
+  height: 48px;
+  padding: 12px 16px;
+  align-items: center;
+  gap: 8px;
+  border-radius: 8px;
+  background: var(--gray-B, #000);
+
+  color: #FFF;
+text-align: center;
+
+/* sb_18_24 */
+font-family: "Pretendard Variable";
+font-size: 18px;
+font-style: normal;
+font-weight: 600;
+line-height: 24px; /* 133.333% */
+font-weight: 700;
+}
+.noComments {
+  margin-top: 30px;
+  align-self: stretch;
+  color: var(--gray-600, #777);
+text-align: center;
+/* r_14_20 */
+font-family: "Pretendard Variable";
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 20px; /* 142.857% */
+}
+.commentList {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-top: 30px;
+}
+.profileConatiner{
+  display: flex;
 }
