--- a/my-app/src/app/boards/detail/styles.module.css
+++ b/my-app/src/app/boards/detail/styles.module.css
@@ -22,6 +22,11 @@
   gap: 4px;
 }
 
+.profileIcon {
+  width: 24px;
+  height: 24px;
+}
+
 .실선 {
   background: #e4e4e4;
   margin: 16px 0;
@@ -33,8 +38,23 @@
   gap: 8px;
 }
 
+.linkIcon {
+  width: 24px;
+  height: 24px;
+}
+
+.locationIcon {
+  width: 24px;
+  height: 24px;
+}
+
 .boardImage {
   margin: 24px 0;
+}
+
+.mainImage {
+  width: 400px;
+  height: 531px;
 }
 
 .boardText {
@@ -47,6 +67,11 @@
   justify-content: center;
   padding: 24px 0;
   background-color: var(--gray-50, #f2f2f2);
+}
+
+.mainVideo {
+  width: 882px;
+  height: 464px;
 }
 
 .goodAndBad {
@@ -66,6 +91,11 @@
   line-height: 20px; /* 142.857% */
 }
 
+.badIcon {
+  width: 24px;
+  height: 24px;
+}
+
 .good {
   display: flex;
   flex-direction: column;
@@ -73,6 +103,11 @@
 
   color: var(--red, #f66a6a);
   line-height: 20px; /* 142.857% */
+}
+
+.goodIcon {
+  width: 24px;
+  height: 24px;
 }
 
 .menuAndEdit {
@@ -97,6 +132,11 @@
   line-height: 20px; /* 142.857% */
 }
 
+.menuIcon {
+  width: 24px;
+  height: 24px;
+}
+
 .edit {
   display: flex;
   height: 40px;
@@ -110,4 +150,9 @@
   text-align: center;
   font-weight: 600;
   line-height: 20px; /* 142.857% */
+}
+
+.editIcon {
+  width: 24px;
+  height: 24px;
 }
