--- a/my-app/src/app/boards/new/styles.module.css
+++ b/my-app/src/app/boards/new/styles.module.css
@@ -1,36 +1,5 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-input::placeholder {
-  color: #ababab;
-}
-
-textarea::placeholder {
-  color: #ababab;
-}
-
-fieldset {
-  border: none; /* 기본 보더 제거 */
-  padding: 0; /* 패딩 제거 */
-  margin: 0; /* 마진 제거 */
-}
-
-legend {
-  display: none;
-}
-
-main {
+.main {
   margin-top: 120px;
-}
-
-#root {
-  display: flex;
-  justify-content: center;
 }
 
 .인풋이름 {
@@ -184,6 +153,11 @@ main {
   align-items: center;
   gap: 8px;
   color: #777;
+}
+
+.addIcon {
+  width: 40px;
+  height: 40px;
 }
 
 .버튼있는곳 {
