--- a/frontend/next-homework/src/app/boards/new/styles.module.css
+++ b/frontend/next-homework/src/app/boards/new/styles.module.css
@@ -1,11 +1,11 @@
-.uploadPostPage {
+.page {
   min-width: 36rem;
   max-width: 78rem;
   padding: 0rem 2rem 0rem 2rem;
 }
 
 /* title */
-.menuTitle {
+.menu {
   width: 100%;
   padding: 1.2rem 2rem 1.2rem 2rem;
   display: flex;
@@ -17,7 +17,7 @@
   gap: 0.8rem;
 }
 
-.menuTitle p {
+.menu p {
   color: #000;
   text-align: center;
 
@@ -29,7 +29,7 @@
 }
 
 /* 작성 영역 */
-.postContainer {
+.container {
   padding: 2rem 2.4rem 2rem 2.4rem;
   display: flex;
   flex-direction: column;
@@ -37,7 +37,7 @@
   gap: 1.6rem;
 }
 
-.inputContainer {
+.input {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -45,7 +45,7 @@
   gap: 0.8rem;
 }
 
-.titleContainer > .inputContainer:first-child {
+.title > .input:first-child {
   margin-bottom: 1.6rem;
 }
 
@@ -66,7 +66,8 @@
   line-height: 2.4rem;
 }
 
-.important {
+/* 필수 입력 사항 */
+.star {
   color: var(--red, #f66a6a);
 
   font-family: "Pretendard Variable";
@@ -76,7 +77,7 @@
   line-height: 2.4rem;
 }
 
-.infoInput {
+.info {
   width: 100%;
   padding: 1.2rem 1.6rem;
   line-height: 2.4rem;
@@ -86,7 +87,7 @@
   background: var(--Gray-W, #fff);
 }
 
-.infoInputContent {
+.infoContent {
   width: 100%;
   height: 12rem;
   padding: 1.2rem 1.6rem;
@@ -98,11 +99,11 @@
   background: var(--Gray-W, #fff);
 }
 
-.postVaildation {
+.vaildation {
   display: none;
 }
 
-.addressInput {
+.address {
   gap: 0.8rem;
 }
 
@@ -111,7 +112,7 @@
   flex-direction: row;
 }
 
-.infoInputAddress {
+.infoAddress {
   padding: 1.2rem 1.6rem;
   line-height: 2.4rem;
 
@@ -121,8 +122,8 @@
 }
 
 .infoInput::placeholder,
-.infoInputContent::placeholder,
-.infoInputAddress::placeholder {
+.infoContent::placeholder,
+.infoAddress::placeholder {
   color: var(--Gray-Gray-400, #ababab);
 
   font-family: "Pretendard Variable";
@@ -151,46 +152,7 @@
   margin-bottom: 0.8rem;
 }
 
-.postUploadImageButton {
-  width: 8rem;
-  height: 8rem;
-
-  border: none;
-  border-radius: 0.8rem;
-  background: var(--gray-50, #f2f2f2);
-}
-
-.postUploadImageButton p {
-  color: var(--gray-600, #777);
-
-  font-family: "Pretendard Variable";
-  font-size: 1.2rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 2rem;
-}
-
 /* 버튼 */
-.addressSearch {
-  height: 4.8rem;
-  padding: 1.2rem 1.6rem;
-  align-items: center;
-  margin-left: 0.8rem;
-
-  border-radius: 0.8rem;
-  border: 0.1rem solid var(--gray-B, #000);
-  background: var(--gray-w, #fff);
-
-  color: var(--gray-B, #000);
-  text-align: center;
-
-  font-family: "Pretendard Variable";
-  font-size: 1.4rem;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 2.4rem;
-}
-
 .postButtonGroup {
   width: 100%;
   display: flex;
@@ -199,44 +161,9 @@
   gap: 0.8rem;
 }
 
-.checkButton {
-  width: 50%;
-  height: 4.8rem;
-  padding: 0.8rem 1.2rem;
-  border-radius: 0.8rem;
-
-  text-align: center;
-
-  font-family: "Pretendard Variable";
-  font-size: 1.4rem;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 2rem;
-}
-
-.postCancelButton {
-  border: 1px solid var(--gray-B, #000);
-  background: var(--gray-w, #fff);
-
-  color: var(--gray-B, #000);
-}
-
-.postSubmitButton {
-  border: none;
-  background: var(--gray-300, #c7c7c7);
-
-  color: var(--gray-100, #e4e4e4);
-}
-
 /* 데스크탑 */
 @media (min-width: 781px) {
-  /* body {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  } */
-
-  .uploadPostPage {
+  .page {
     width: 128rem;
     min-width: 78.1rem;
     max-width: 192rem;
