--- a/react-homework/day23/src/app/boards/new/styles.module.css
+++ b/react-homework/day23/src/app/boards/new/styles.module.css
@@ -9,7 +9,6 @@
   width: 1280px;
   justify-content: center;
   gap: 40px;
-  padding: 40px 0;
 }
 
 .header {
@@ -85,6 +84,7 @@
 }
 
 .btn_search_zip_code {
+  display: flex;
   height: 48px;
   padding: 12px 16px;
   align-items: center;
