--- a/react-homework/day23/src/app/globals.css
+++ b/react-homework/day23/src/app/globals.css
@@ -18,9 +18,9 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-
   display: flex;
   width: 100%;
+  padding: 40px 0;
   justify-content: center;
 }
 
