--- a/homework/my-app/src/app/boards/style.module.css
+++ b/homework/my-app/src/app/boards/style.module.css
@@ -18,16 +18,6 @@
     border-radius: 8px;
     background: var(#fff);
 }
-.datePickerContainer {
-    display: flex;
-    align-items: center;
-    border-radius: 8px;
-    width: 300px;
-
- 
- 
-
-}
 
 .dateInput {
     width: 100%;
@@ -79,12 +69,12 @@
 
 .listOfWriing {
     border-top: 1px solid var(--gray-300);
-    width: 800px;
-    height: 240px;
-    padding: 20px;
+    width: 1000px;
+    height: 200px;
+    padding: 10px;
 
     display: grid; /* 그리드 레이아웃 활성화 */
-    grid-template-columns: 0.5fr 1.4fr 1fr; /* 3개의 동일한 너비의 컬럼 생성 */
+    grid-template-columns: 0.5fr 1.5fr 1fr; /* 3개의 동일한 너비의 컬럼 생성 */
     gap: 15px;
 }
 
@@ -94,24 +84,25 @@
     justify-content: space-between;
 }
 .dateContainer {
-    margin-left: 10px;
+    /* margin-left: 10px; */
     width: 100px;
     height: 80px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
+}
+.listNum {
+    font-size: 16px;
+    font-weight: 900;
+    color: var(--gray-700)
 }
 .date {
-    font-size: 40px;
-    font-weight: 900;
-    color: var(--gray-300)
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--gray-700);
+    margin-top: 10px;
 }
-.month {
-    font-size: 19px;
-    font-weight:700;
-    color: var(--gray-300);
 
-}
 .authorName {
     font-size: 14px;
     font-weight: 600;
@@ -121,12 +112,37 @@
 .title {
     font-size: 20px;
     font-weight: 900;
-    color: var(--gray-700)
+    color: var(--gray-900)
 }
 
 .thumbnail img {
     width: 386px; /* 가로 크기 고정 */
-    height: 200px; /* 세로 크기 고정 */
+    height: 180px; /* 세로 크기 고정 */
     object-fit: cover; /* 이미지 비율을 유지하면서 크기에 맞게 잘라냄 */
 }
 
+
+
+.datePickerContainer {
+    display: flex;
+    align-items: center;
+    border-radius: 8px;
+    width: 300px;
+
+}
+.customInput {
+    width: 120%; /* 원하는 너비 */
+    padding: 10px; /* 패딩 설정 */
+    /* border: 1px solid #ccc; 테두리 설정 */
+    border-radius: 4px; /* 둥근 모서리 */
+    font-size: 16px; /* 글씨 크기 설정 */
+    /* 다른 스타일 추가 가능 */
+    height: 48px;
+}
+
+.react-datepicker__input-container::before {
+
+    width: 24px; /* 아이콘의 너비 */
+    height: 24px; /* 아이콘의 높이 */
+    background-image: url('/image/add.png'); /* 아이콘 경로 */
+}
