--- a/03-react-hw/DAY23/src/app/boards/page.module.css
+++ b/03-react-hw/DAY23/src/app/boards/page.module.css
@@ -57,6 +57,8 @@
   border: 1px solid var(--gray-50, #f2f2f2);
 
   cursor: pointer;
+
+  position: relative;
 }
 
 .유저번호 {
@@ -104,4 +106,12 @@
   font-size: 14px;
   font-style: normal;
   font-weight: 300;
+}
+
+.게시글삭제버튼 {
+  position: absolute;
+  right: 8px;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
