[241001] 3. 게시글조회 - GRAPHQL-API(deleteBoard)에 id값을 variables로 포함시켜 삭제를 요청해 주세요. - 서버에서 삭제된 게시글이 내 브라우저에서도 삭제되어야 합니다. 따라서, GRAPHQL-API(fetchBoards)를 다시 요청하여 게시물 목록을 갱신해 주세요.

--- a/02-main_camp/Day24/src/app/boards/components/styles.module.css
+++ b/02-main_camp/Day24/src/app/boards/components/styles.module.css
@@ -36,7 +36,7 @@
     padding: .75rem 1.5rem .75rem 1.5rem;
 }
 
-.board:hover .board_deleteImg {
+.board:hover .board_deleteButton {
     display: block;
 }
 
@@ -69,7 +69,7 @@
     color: #919191;
 }
 
-.board_deleteImg {
+.board_deleteButton {
     display: none;
     position: absolute;
     top: 10px;
