--- a/Next/nextproject/next-app/src/app/boards/style.module.css
+++ b/Next/nextproject/next-app/src/app/boards/style.module.css
@@ -70,12 +70,19 @@
 
 }
 
+.css_delete {
+    width: 24px;
+    height: 24px;
+    border-radius: 10px;
+    /* border: 4px solid #EE6F6F; */
+}
+
 .css_listall {
     width: 1184px;
     height: 548px;
     gap: 12px;
-
     display: flex;
+    flex-direction: column;
 }
 
 .css_yourboard {
@@ -86,7 +93,13 @@
     padding: 12px 24px 12px 24px;
     gap: 8px;
     display: flex;
+    flex-direction: row;
     text-align: center;
+}
+
+.css_border {
+    display: flex;
+    flex-direction: row;
 }
 .css_boardnum {
     width: 64px;
@@ -98,6 +111,7 @@
     height: 20px;
     gap: 10px;
     text-align: left;
+    display: flex;
 }
 .css_boardwriter {
     width: 100px;
