feat: add boards listing page, fetching data with graphql, enter to detail from boards, delete single board and re-fetch list

--- a/03-trip/03-03-Next/src/app/boards/[boardId]/styles.module.css
+++ b/03-trip/03-03-Next/src/app/boards/[boardId]/styles.module.css
@@ -42,7 +42,7 @@
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  padding: 2rem;
+  padding: 4rem;
 }
 
 .main_btn {
@@ -50,7 +50,7 @@
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  padding: 4rem;
+  padding-bottom: 8rem;
 }
 
 .btn_list,
