--- a/trip-talk/src/app/components/ImageUploader/styles.module.css
+++ b/trip-talk/src/app/components/ImageUploader/styles.module.css
@@ -1,6 +1,6 @@
 .image_uploader_wrapper {
   @apply flex w-40 h-40 flex-col justify-center items-center gap-2 rounded-lg;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
 }
 
 .upload_prompt {
