--- a/03-react-hw/DAY23/src/app/globals.css
+++ b/03-react-hw/DAY23/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "PretendarVariable";
+  src: url("/fonts/PretendarVariable.woff2") format("woff2");
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,6 +14,7 @@
 }
 
 body {
+  font-family: var(--font-pretendard);
   display: flex;
   justify-content: center;
   padding: 2.5rem;
