feat: edit page, recycle component

--- a/03-trip/03-03-Next/src/app/globals.css
+++ b/03-trip/03-03-Next/src/app/globals.css
@@ -32,7 +32,7 @@ a {
   padding: 0;
   color: var(--mono-gray900);
   font-size: 1.6rem;
-  font-family: var(--font-paperlogy-medium);
+  font-family: var(--font-paperlogy-regular);
 }
 
 body {
