--- a/03-trip/03-03-Next/src/components/PostDetail/styles.module.css
+++ b/03-trip/03-03-Next/src/components/PostDetail/styles.module.css
@@ -15,6 +15,14 @@
   gap: 0.4rem;
 }
 
+.profile_text,
+.date_text {
+  padding: 0.4rem 1.2rem;
+  border-radius: 0.8rem;
+  background-color: #222;
+  color: #f2f2f2;
+}
+
 .info_link {
   display: flex;
   justify-content: flex-end;
@@ -26,6 +34,7 @@
   max-width: 50rem;
   padding: 2rem 0rem;
   text-wrap: balance;
+  font-family: var(--font-paperlogy-regular);
 }
 
 .main_video {
@@ -61,4 +70,10 @@
   padding: 1rem;
   border: 2px solid #bdbdbd;
   border-radius: 0.8rem;
+}
+
+.btn_list:hover,
+.btn_edit:hover {
+  background-color: #f0f0f0;
+  filter: invert(1);
 }
