--- a/next_과제/src/components/searchBox/index.module.scss
+++ b/next_과제/src/components/searchBox/index.module.scss
@@ -1,38 +1,16 @@
-.inputDate {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  padding: 10px 0;
+.datePicker {
+  display: flex;
+  align-items: center;
 
-  &::before {
-    content: attr(placeholder);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: var(--base-100);
-    display: flex;
-    align-items: center;
-  }
-
-  &::webkit-clear-button,
-  &::webkit-inner-spin-button {
-    display: none;
-  }
-  &::-webkit-calendar-picker-indicator {
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    height: 100%;
-    width: 100%;
-    background: transparent;
-    color: transparent;
-    cursor: pointer;
-  }
-  &:valid::before {
-    display: none;
+  [class="react-datepicker__input-container"],
+  [class="react-datepicker-wrapper"] {
+    width: 6.8125rem;
+    input {
+      width: 100%;
+      text-align: center;
+      &:focus {
+        outline: none;
+      }
+    }
   }
 }
