--- a/02-main_camp/Day27/src/app/components/boards/Boards-detail/BoardCommentsInputForm/styles.module.css
+++ b/02-main_camp/Day27/src/app/components/boards/Boards-detail/BoardCommentsInputForm/styles.module.css
@@ -31,3 +31,19 @@
 
   padding: 0.75rem 1rem 0.75rem 1rem;
 }
+
+.buttonContainer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.submitButton {
+  height: 3rem;
+  background-color: #c7c7c7;
+  border-radius: 0.5rem;
+
+  font-weight: 600;
+  font-size: 1.125rem;
+  color: #e4e4e4;
+  padding: 0.75rem 1rem 0.75rem 1rem;
+}
