[241007] 5.게시글상세[댓글목록조회]: 수정 및 삭제 버튼 추가

--- a/02-main_camp/Day27/src/app/components/boards/Boards-detail/Comment/styles.module.css
+++ b/02-main_camp/Day27/src/app/components/boards/Boards-detail/Comment/styles.module.css
@@ -1,10 +1,20 @@
 .headerContainer {
   display: flex;
+  justify-content: space-between;
+}
+
+.profileContainer {
+  display: flex;
   gap: 0.5rem;
 }
 
 .starsContainer {
   display: flex;
+}
+
+.sideButtonContainer {
+  display: flex;
+  gap: 0.5rem;
 }
 
 .dateContainer {
