--- a/homework/my-app/src/components/boards-detail/style.module.css
+++ b/homework/my-app/src/components/boards-detail/style.module.css
@@ -1,3 +1,4 @@
+
 /* * {
   box-sizing: border-box;
   background-color: #f8efe8;
@@ -16,6 +17,7 @@ body{
   margin:0;titleContainer
 } */
 
+
 .container {
   max-width: 1280px;
   margin: 0 auto;
@@ -32,7 +34,8 @@ body{
   gap: 5px;
 }
 .bigTitle {
-  font-size: 50px;
+  font-family: "basic";
+  font-size: 70px;
   font-weight: 500;
   color: var(--gray-800)
 }
@@ -78,12 +81,10 @@ body{
 
 .title {
   color: var(--gray-800);
-  font-family: Pretendard;
   font-size: 30px;
   font-weight: 700;
   line-height: 35px;
 }
-
 .contentContainer{
   margin-top: 60px;
   display: grid;
@@ -125,10 +126,11 @@ body{
   display: flex;
   flex-direction: column;
   height: 100%;
-  padding-left:30px;
+  padding-left:50px;
   /* max-height: 550px; */
   align-self: start; /* 상단 정렬 */
   justify-self: start; /* 좌측 정렬 */
+
 }
 .textContent {
   overflow: auto;
@@ -189,7 +191,7 @@ body{
   /* border-bottom: 1px solid var(--gray-300); */
 }
 .grayBox {
-  background-color: #dcdfe6;
+  background-color: #595959;
   width: 100%;
   height: 512px;
   display: flex;
