댓글 별점등록, 배너, 아이콘 완성

--- a/cna-homework/src/app/boards/[boardId]/styles.module.css
+++ b/cna-homework/src/app/boards/[boardId]/styles.module.css
@@ -1,5 +1,5 @@
 .detailAllContainer {
-  background-color: aliceblue;
+  /* background-color: aliceblue; */
   width: 100%;
   height: auto;
   display: flex;
