--- a/Next/nextproject/next-app/src/app/component/board-detail/comment-write/style.module.css
+++ b/Next/nextproject/next-app/src/app/component/board-detail/comment-write/style.module.css
@@ -13,7 +13,10 @@
   display: flex;
   flex-direction: row;
 }
-
+.css_star {
+  margin-bottom: 50px;
+  margin-top: 30px;
+}
 .css_namebox {
   width: 312px;
   height: 80px;
