--- a/Next/nextproject/next-app/src/app/component/board-detail/comment-list/style.module.css
+++ b/Next/nextproject/next-app/src/app/component/board-detail/comment-list/style.module.css
@@ -13,7 +13,7 @@
   justify-content: space-between;
 }
 .css_profilewriter {
-  width: 193px;
+  min-width: 193px;
   height: 24px;
   gap: 8px;
   display: flex;
@@ -25,10 +25,14 @@
   background-color: #e4e4e4;
 }
 .css_writer {
-  width: 37px;
+  /* width: 100%; */
   height: 20px;
   gap: 4px;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: row;
 }
+
 .css_image {
   display: flex;
   flex-direction: row;
