--- a/Next/nextproject/next-app/src/app/component/board-detail/detail/style.module.css
+++ b/Next/nextproject/next-app/src/app/component/board-detail/detail/style.module.css
@@ -146,8 +146,6 @@
 }
 
 .css_detailbutton {
-  width: 1280px;
-  height: 40px;
   gap: 24px;
   display: flex;
   justify-content: center;
@@ -157,6 +155,7 @@
 .css_list {
   background-color: transparent;
   border: transparent;
+  padding: 8px 12px;
 }
 
 .css_listimage {
@@ -167,6 +166,7 @@
 .css_modify {
   background-color: transparent;
   border: transparent;
+  padding: 8px 12px;
 }
 
 .css_modifyimage {
