--- a/Next/nextproject/next-app/src/app/component/board-list/list/style.module.css
+++ b/Next/nextproject/next-app/src/app/component/board-list/list/style.module.css
@@ -1,39 +1,16 @@
-.css_listlayout {
-  width: 1920px;
-  gap: 40px;
+.css_banner {
+  width: 1187px;
+  margin-bottom: 50px;
 }
 
-.css_listmain {
-  width: 100%;
-  height: 736px;
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  align-items: center;
-  border: 1px solid red;
-  padding: 40px 0px 40px 0px;
-}
-.css_main {
+.css_listbanner {
   width: 1280px;
   height: 656px;
   border-radius: 16px;
   padding: 24px 48px 24px 48px;
   gap: 24px;
-  border: 1px solid blue;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  min-width: 680px;
+  box-shadow: 20px 20px 20px black;
 }
-
-.css_all {
-  width: 1184px;
-  height: 609px;
-  gap: 8px;
-  display: flex;
-  flex-direction: column;
-}
-
 .css_listheader {
   width: 1184px;
   height: 52px;
